# template-django-linting

./: README.md  pyproject.toml
core/: settings.py
