[tool.black]
line-length = 88
exclude = '''
/(
  | migrations
  | .venv
)/
'''

[tool.flake8]
ignore = ["F405", "E501", "W503", "E731", "E741",]
max-line-length = 88
exclude = [
    ".git", "migrations", "node_modules", "docs", ".venv", "frontend"
]
statistics = false

[tool.isort]
line_length = 88
skip_glob = "*/migrations/.py"
multi_line_output = 3
profile = "black"
filter_files = true
include_trailing_comma = true
force_grid_wrap = 2

[tool.poetry]
name = "Django core project"
version = "0.1.0"
description = ""
authors = ["Piwero <piwero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.8"
Django = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
flake9 = "3.8.3.post2"
pre-commit = "^3.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
